Exercicis/practicaFinal/ingressweb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcont-ing
  namespace: frontend
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: webserver-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: content-svc
            port:
              number: 8081
        path: /static
        pathType: Prefix
